err/plone.recipe.plone.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dist_plone'...
Compiling './lib/python3.5/site-packages/dist_plone/dist_plone.py'...
***   File "./lib/python3.5/site-packages/dist_plone/dist_plone.py", line 110
    raise RuntimeError, "Failed to setup package"
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dist_plone/export.py'...
***   File "./lib/python3.5/site-packages/dist_plone/export.py", line 17
    print "Usage: script username cvstag"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dist_plone/itarfile.py'...
***   File "./lib/python3.5/site-packages/dist_plone/itarfile.py", line 66
    raise ImportError, "tarfile does not work for platform==mac"
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dist_plone/platforms'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plone'...
Listing './lib/python3.5/site-packages/plone/recipe'...
Listing './lib/python3.5/site-packages/plone/recipe/distros'...
Compiling './lib/python3.5/site-packages/plone/recipe/distros/__init__.py'...
***   File "./lib/python3.5/site-packages/plone/recipe/distros/__init__.py", line 129
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/plone/recipe/plone'...
Listing './lib/python3.5/site-packages/plone.recipe.distros-1.5.egg-info'...
Listing './lib/python3.5/site-packages/plone.recipe.plone-3.1.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc/recipe'...
Listing './lib/python3.5/site-packages/zc/recipe/egg'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/zc.recipe.egg-2.0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
